fix close button z-index

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@
 	height: 30px;
 	opacity: .35;
 	cursor: pointer;
+	z-index: 2;
 }
 
 #box-close:hover {
